--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="logo192.png"/><link rel="manifest" href="manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.5006e5c8.js"></script><link href="/static/css/main.85964a77.css" rel="stylesheet"></head><body onload="addPaymentScript()"><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>function addPaymentScript(){let e=document.createElement("script");e.setAttribute("src","https://js.chargebee.com/v2/chargebee.js"),e.setAttribute("data-cb-site","cedcommerce-test"),document.body.appendChild(e),console.log(document,e,"pl")}</script></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Web site created using create-react-app" />
+    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="manifest" href="manifest.json" />
+    <title>React App</title>
+    <script defer="defer" src="static/js/main.5006e5c8.js"></script>
+    <link href="static/css/main.85964a77.css" rel="stylesheet">
+</head>
+
+<body onload="addPaymentScript()"><noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script>function addPaymentScript() { let e = document.createElement("script"); e.setAttribute("src", "https://js.chargebee.com/v2/chargebee.js"), e.setAttribute("data-cb-site", "cedcommerce-test"), document.body.appendChild(e), console.log(document, e, "pl") }</script>
+</body>
+
+</html>
